syntax = "proto3";

package pb;


option go_package = "github.com/carlosCACB333/cb-grpc/pb";


message SendEmailReq{
    repeated string to = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailRes{
    string status = 1;
    string message = 2;
}

service UtilService{
    rpc SendEmail(SendEmailReq) returns (SendEmailRes);
}
